# Email-Classifier

./: .gitignore  Dockerfile  Procfile  RAILWAY_DEBUG.md  RAILWAY_DEPLOY.md  README.md  docker-compose.yml  nixpacks.toml  railway.json  requirements.txt  setup_postgres.py  test_dependencies.py  test_health.py
apps/backend/: MIGRATIONS.md  README.md  alembic.ini  debug_settings.py  deploy.py  env.example  env.template  migrate.py  migrate_to_production.py  pyproject.toml  requirements.txt  run_migrations.py  teste.py
apps/backend/core/: config.py  path.py
apps/backend/email_classifier_llm/: __init__.py  database.py  main.py
apps/backend/email_classifier_llm/models/: client.py
apps/backend/email_classifier_llm/prompts/: prompt_v1.txt
apps/backend/email_classifier_llm/routers/: classify.py  clients.py
apps/backend/email_classifier_llm/services/: client_service.py  llm_client.py  processor.py  settings.py
apps/backend/migrations/: env.py
apps/backend/tests/: test_health.py
apps/frontend/: app.js  index.html  styles.css
