[project]
name = "email-classifier-llm"
version = "0.1.0"
description = "Email classification using LLM APIs"
authors = [
    {name = "Diego Canafistula", email = "diego.canafistula@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pydantic[dotenv] (>=2.11.9,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=1.109.1,<2.0.0)",
    "anthropic (>=0.40.0,<1.0.0)",
    "google-generativeai (>=0.8.3,<1.0.0)",
    "pypdf (>=6.1.1,<7.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "pymysql (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "email_classifier_llm", from = "."}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = {extras = ["http2"], version = "^0.28.1"}
ruff = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
